<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background"
    tools:context=".home.HomeFragment">


    <TextView
        android:id="@+id/text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="8dp"
        android:shadowColor="@color/purple_700"
        android:shadowDx="8"
        android:shadowDy="8"
        android:text="@string/app_name"
        android:textColor="@color/purple_500"
        android:textSize="32sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_maktab"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/urdu"
        android:padding="8dp"
        android:text="@string/maktab"
        android:textSize="20sp"
        app:backgroundTint="@color/white"
        app:icon="@drawable/ic_book"
        app:iconGravity="textTop"
        app:layout_constraintBottom_toTopOf="@+id/btn_search"
        app:layout_constraintEnd_toStartOf="@+id/btn_add_book"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:strokeColor="@color/purple_500" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_add_book"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="48dp"
        android:fontFamily="@font/urdu"
        android:padding="8dp"
        android:text="@string/add_book"
        android:textSize="20sp"
        app:backgroundTint="@color/white"
        app:icon="@drawable/ic_add_book"
        app:iconGravity="textTop"
        app:layout_constraintBottom_toTopOf="@+id/btn_report"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_maktab"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:strokeColor="@color/purple_500" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_search"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/urdu"
        android:padding="8dp"
        android:text="@string/search"
        android:textSize="20sp"
        app:icon="@drawable/ic_search_black_24dp"
        app:iconGravity="textTop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_report"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_maktab"
        app:layout_constraintVertical_chainStyle="packed"
        app:strokeColor="@color/purple_700" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_report"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="48dp"
        android:fontFamily="@font/urdu"
        android:padding="8dp"
        android:text="@string/export"
        android:textSize="20sp"
        app:icon="@drawable/ic_pdf"
        app:iconGravity="textTop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_search"
        app:layout_constraintTop_toBottomOf="@+id/btn_add_book" />

</androidx.constraintlayout.widget.ConstraintLayout>